--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
                     <a class="nav-link" href="#start">START</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#o-nas">O NAS</a>
+                    <a class="nav-link" href="#about-us">O NAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#co-kiedy">CO I KIEDY</a>
+                    <a class="nav-link" href="#what-&-when">CO I KIEDY</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#swiadkowie">ŚWIADKOWIE</a>
+                    <a class="nav-link" href="#wedding-witnesses">ŚWIADKOWIE</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#nasze-zdjecia">NASZE ZDJĘCIA</a>
+                    <a class="nav-link" href="#our-photos">NASZE ZDJĘCIA</a>
                 </li>
             </ul>
         </div>
@@ -80,14 +80,14 @@
         <!-- Add to Google Calendar Button -->
         <a href="https://calendar.google.com/calendar/u/0/r/eventedit?text=Viktoria+i+Pawe%C5%82+bior%C4%85+%C5%9Alub%21&dates=20260604T120000Z/20260604T130000Z&details=Viktoria+i+Pawe%C5%82+powiedz%C4%85+sobie+%E2%80%9Etak%E2%80%9D%2C+%C5%82%C4%85cz%C4%85c+swoje+serca+i+%C5%BCycie+na+zawsze.+Ten+dzie%C5%84+b%C4%99dzie+pocz%C4%85tkiem+ich+wsp%C3%B3lnej+drogi+pe%C5%82nej+mi%C5%82o%C5%9Bci%2C+szcz%C4%99%C5%9Bcia+i+pi%C4%99knych+chwil.&location=Ko%C5%9Bci%C3%B3%C5%82+MB+Cz%C4%99stochowskiej+w+Kossowie%2C+26%2C+29-135+Koss%C3%B3w%2C+Polska"
            target="_blank"
-           class="btn btn-light btn-lg fade-in-start">
+           class="btn btn-light btn-lg fade-in-start mb-4">
             📅 Dodaj do kalendarza Google
         </a>
     </div>
 </div>
 
-<!-- O nas Section -->
-<section id="o-nas">
+<!-- About Us Section -->
+<section id="about-us">
     <div class="container">
         <div class="row">
             <h2 class="display-4 text-center mb-4">O nas</h2>
@@ -108,8 +108,8 @@
     </div>
 </section>
 
-<!-- Co i kiedy Section -->
-<section id="co-kiedy">
+<!-- What & When Section -->
+<section id="what-&-when">
     <div class="container">
         <div class="row g-4">
             <h2 class="display-4 text-center mb-5">Co i Kiedy</h2>
@@ -160,8 +160,8 @@
     </div>
 </section>
 
-<!-- Świadkowie Section -->
-<section id="swiadkowie">
+<!-- Wedding Witnesses Section -->
+<section id="wedding-witnesses">
     <div class="container">
         <div class="row">
             <h2 class="display-4 text-center mb-5">Świadkowie</h2>
@@ -201,7 +201,7 @@
 </section>
 
 <!-- Nasze Zdjęcia Section -->
-<section id="nasze-zdjecia">
+<section id="our-photos">
     <div class="container">
         <div class="row">
             <h2 class="display-4 text-center mb-5">Nasze Zdjęcia</h2>
