fix: Fix OpenStreetMap

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <a class="nav-link" href="#about-us">O NAS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#what-&-when">CO I KIEDY</a>
+                    <a class="nav-link" href="#what-and-when">CO I KIEDY</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#wedding-witnesses">ŚWIADKOWIE</a>
@@ -108,7 +108,7 @@
 </section>
 
 <!-- What & When Section -->
-<section id="what-&-when">
+<section id="what-and-when">
     <div class="container">
         <div class="row g-4">
             <h2 class="display-4 text-center mb-5">Co i Kiedy</h2>
