chore: Change church data

--- a/index.html
+++ b/index.html
@@ -133,12 +133,12 @@
                         <img src="assets/church.svg" alt="Kościół" class="mb-4" style="width: 130px; height: 130px;">
                         <h4 class="card-title mb-1">Kościół MB Częstochowskiej</h4>
                         <p class="card-text mb-0">
-                            <a href="https://www.google.com/maps?q=Kościół+MB+Częstochowskiej+w+Kossowie+26+29-135+Kossów"
+                            <a href="https://www.google.com/maps?q=Kościół+św.+Stanisława+BM+w+Rakoszynie"
                                target="_blank" rel="noopener" class="maps-link">
-                                Kossów, 26, 29-135 Kossów
+                                28-362 Rakoszyn
                             </a>
                         </p>
-                        <small class="text-muted">14:00</small>
+                        <small class="text-muted">15:00</small>
                     </div>
                 </div>
             </div>
@@ -153,7 +153,7 @@
                                 Ogarka 33, 29-100 Ogarka
                             </a>
                         </p>
-                        <small class="text-muted">16:00 - ∞</small>
+                        <small class="text-muted">16:30 - ∞</small>
                     </div>
                 </div>
             </div>
