fix: fix church data

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                 <div class="card h-100 text-center">
                     <div class="card-body">
                         <img src="assets/church.svg" alt="Kościół" class="mb-4" style="width: 130px; height: 130px;">
-                        <h4 class="card-title mb-1">Kościół MB Częstochowskiej</h4>
+                        <h4 class="card-title mb-1">Kościół św. Stanisława BM</h4>
                         <p class="card-text mb-0">
                             <a href="https://www.google.com/maps?q=Kościół+św.+Stanisława+BM+w+Rakoszynie"
                                target="_blank" rel="noopener" class="maps-link">
